--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'About') %>
+<% provide(:title, 'About Us') %>
 <h1>About</h1>
 <p>
   This is the sample application from the Ruby on Rails Tutorial.
